Done with few modifications in page styling

--- a/templates/diabetes.html
+++ b/templates/diabetes.html
@@ -127,12 +127,25 @@
         </div>
       </div>
 
+      <div class="card my-5">
+        <div class="card-header">
+          <h2>Diabetes Test</h2>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Want to take <strong>Diabetes Test</strong>:</h5>
+          <p class="card-text">Take test to know whether you are fit or not?</p>
+          <a href="/test" class="btn btn-primary">Take Test</a>
+        </div>
+      </div>
 
   </div>
 
 
+  <hr>
+  <!-- FOOTER -->
   <footer class="container">
-    <p>&copy; Company 2017-2019</p>
+    <p class="float-right"><a href="#">Back to top</a></p>
+    <p>&copy; 2019-2020 Care++ Company, Inc. </p>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
