--- a/templates/home.html
+++ b/templates/home.html
@@ -43,22 +43,17 @@
     </div>
   
     <div class="container">
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+      <div class="card my-5">
+        <div class="card-header">
+          <h1>Diabetes Test</h1>
         </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+        <div class="card-body text-center">
+          <h5 class="card-title">Take Diabetes Test</h5>
+          <p class="card-text">Want to know whether you have diabetes or not, take the test to clear your doubts. </p>
+          <a href="/test" class="btn btn-primary">Take Test</a>
         </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+        <div class="card-footer text-muted">
+    
         </div>
       </div>
   
@@ -67,9 +62,11 @@
     </div> <!-- /container -->
   
   </main>
-  
+  <hr>
+  <!-- FOOTER -->
   <footer class="container">
-    <p>&copy; Company 2017-2019</p>
+    <p class="float-right"><a href="#">Back to top</a></p>
+    <p>&copy; 2019-2020 Care++ Company, Inc. </p>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
