--- a/templates/index.html
+++ b/templates/index.html
@@ -28,40 +28,56 @@
     </ul>
   </div>
   </nav>
-  
+
+  <div class="alert alert-secondary alert-dismissible fade show" role="alert">
+    <strong>Remember</strong> This test is not intended to substitute medical diagnosis.
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+
   <div class="container">
-    <h2 class="text-center mt-3">Diabtes Detection</h2>
-      <form action="/" method="POST">
+    <h1 class="display-2 text-center my-4">Diabetes Detection</h1>
+    <hr>
+      <form action="/test" method="POST">
 
-        <div class="form-group">
-          <label for="pregnancies">No. of Pregnancies: </label>
-          <input type="text" class="form-control" id="pregnancies" name="pregnancies" placeholder="Enter number of pregnancies">
+        <div class="form-group mt-5">
+          <label for="pregnancies"><h4>No. of Pregnancies: </h4></label>
+          <input type="text" class="form-control form-control-lg" id="pregnancies" name="pregnancies" placeholder="Enter number of pregnancies">
         </div>
 
         <div class="form-group">
-          <label for="glucose">Enter Glucose Level: </label>
-          <input type="text" class="form-control" id="glucose" name="glucose" placeholder="Enter glucose level">
+          <label for="glucose"><h4>Glucose Level: </h4></label>
+          <input type="text" class="form-control form-control-lg" id="glucose" name="glucose" placeholder="Enter glucose level">
         </div>
 
         <div class="form-group">
-          <label for="insulin">Enter Insulin Level: </label>
-          <input type="text" class="form-control" id="insulin" name="insulin" placeholder="Enter insulin level">
+          <label for="insulin"><h4>Enter Insulin Level: </h4></label>
+          <input type="text" class="form-control form-control-lg" id="insulin" name="insulin" placeholder="Enter insulin level">
         </div>
 
         <div class="form-group">
-          <label for="bmi">Enter Body Mass Index(BMI): </label>
-          <input type="text" class="form-control" id="bmi" name="bmi" placeholder="Enter bmi">
+          <label for="bmi"><h4>Enter Body Mass Index(BMI): </h4></label>
+          <input type="text" class="form-control form-control-lg" id="bmi" name="bmi" placeholder="Enter bmi">
         </div>
 
         <div class="form-group">
-          <label for="age">Enter Age: </label>
-          <input type="text" class="form-control" id="age" name="age" placeholder="Enter your age">
+          <label for="age"><h4>Enter Age: </h4></label>
+          <input type="text" class="form-control form-control-lg" id="age" name="age" placeholder="Enter your age">
         </div>
 
-        <button class="btn btn-primary" type="submit">Submit</button>
+        <button class="btn btn-primary btn-lg my-4" type="submit">Submit</button>
 
     </form>
   </div>
+
+  <hr>
+  <!-- FOOTER -->
+  <footer class="container">
+    <p class="float-right"><a href="#">Back to top</a></p>
+    <p>&copy; 2019-2020 Care++ Company, Inc. </p>
+  </footer>
+  
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
