--- a/templates/home.html
+++ b/templates/home.html
@@ -38,7 +38,7 @@
         <p><h3>We at <strong>Care++</strong> are ready to do your diabetes test.</h3></p>
         <p>We care you so you can live a healthy and happy life.</p>
         <hr class="my-4">
-        <p><a class="btn btn-primary btn-lg" href="/know" role="button">Learn more &raquo;</a></p>
+        <p><a class="btn btn-primary btn-lg" href="/diabetes" role="button">Learn more &raquo;</a></p>
       </div>
     </div>
   
