Done few changes like spelling mistakes and language statements

--- a/templates/show.html
+++ b/templates/show.html
@@ -35,7 +35,7 @@
           <div class="container">
             <h1 class="display-4 font-italic">Result :)</h1>
             <hr class="my-4">
-            <p class="lead"><h2>We are glad YOU don't have diabetes.</h2></p>
+            <p class="lead"><h2>We are glad to say that there is very low probability of having diabetes for you.</h2></p>
             <p class="lead"><h4>Stay Healthy.</h4></p>
           </div>
         </br> </br>
@@ -52,7 +52,7 @@
     <div class="container">
       <h1 class="display-4 font-italic">Result :(</h1>
       <hr class="my-4">
-      <p class="lead"><h2>We are sad to inform that YOU have diabetes.</h2></p>
+      <p class="lead"><h2>We are sad to inform that there is high probability that you have diabetes.</h2></p>
       <p class="lead"><h4>Consult a doctor.</h4></p>
     </div>
   </br> </br>
