--- a/templates/index.html
+++ b/templates/index.html
@@ -43,27 +43,27 @@
 
         <div class="form-group mt-5">
           <label for="pregnancies"><h4>No. of Pregnancies: </h4></label>
-          <input type="text" class="form-control form-control-lg" id="pregnancies" name="pregnancies" placeholder="Enter number of pregnancies">
+          <input type="text" class="form-control form-control-lg" id="pregnancies" name="pregnancies" placeholder="Enter No. of Pregnancies">
         </div>
 
         <div class="form-group">
           <label for="glucose"><h4>Glucose Level: </h4></label>
-          <input type="text" class="form-control form-control-lg" id="glucose" name="glucose" placeholder="Enter glucose level">
+          <input type="text" class="form-control form-control-lg" id="glucose" name="glucose" placeholder="Enter Glucose Level">
         </div>
 
         <div class="form-group">
           <label for="insulin"><h4>Enter Insulin Level: </h4></label>
-          <input type="text" class="form-control form-control-lg" id="insulin" name="insulin" placeholder="Enter insulin level">
+          <input type="text" class="form-control form-control-lg" id="insulin" name="insulin" placeholder="Enter Insulin Level">
         </div>
 
         <div class="form-group">
           <label for="bmi"><h4>Enter Body Mass Index(BMI): </h4></label>
-          <input type="text" class="form-control form-control-lg" id="bmi" name="bmi" placeholder="Enter bmi">
+          <input type="text" class="form-control form-control-lg" id="bmi" name="bmi" placeholder="Enter BMI">
         </div>
 
         <div class="form-group">
           <label for="age"><h4>Enter Age: </h4></label>
-          <input type="text" class="form-control form-control-lg" id="age" name="age" placeholder="Enter your age">
+          <input type="text" class="form-control form-control-lg" id="age" name="age" placeholder="Enter Your Age">
         </div>
 
         <button class="btn btn-primary btn-lg my-4" type="submit">Submit</button>
